prepped to publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,12 @@
 name = "lsp-servers-cli"
 version = "0.1.0"
 edition = "2024"
-description = "Provides a list of relevant language servers for a given directory."
+description = "ClI that provides a list of relevant language servers for a given directory."
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/gusjengis/lsp-servers-cli"
+readme = "README.md"
+keywords = ["lsp", "language-server", "development-tools"]
+categories = ["development-tools"]
 
 [[bin]]
 name = "lsp-servers"    
